--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,11 +18,12 @@
         android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_gravity="start"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="20dp">
 
@@ -49,11 +50,13 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="start"
-                android:layout_gravity="center">
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -65,32 +68,28 @@
 
                 <com.google.android.material.imageview.ShapeableImageView
                     app:shapeAppearanceOverlay="@style/RoundedSquare"
-                    android:layout_width="340dp"
+                    android:layout_width="match_parent"
                     android:layout_height="70dp"
-                    android:background="@color/pastel"
+                    android:background="?attr/fragmentsBackground"
                     android:scaleType="fitStart"
-                    android:src="@drawable/graph3"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="30dp"
-                    />
-
-                <com.google.android.material.imageview.ShapeableImageView
-                    app:shapeAppearanceOverlay="@style/RoundedSquare"
-                    android:layout_width="340dp"
-                    android:layout_height="300dp"
-                    android:background="@color/pastel"
-                    android:scaleType="center"
-                    android:src="@drawable/graph1"
                     android:layout_gravity="center"
                     android:layout_marginBottom="30dp"/>
 
                 <com.google.android.material.imageview.ShapeableImageView
                     app:shapeAppearanceOverlay="@style/RoundedSquare"
-                    android:layout_width="340dp"
+                    android:layout_width="match_parent"
                     android:layout_height="300dp"
-                    android:background="@color/pastel"
+                    android:background="?attr/fragmentsBackground"
                     android:scaleType="center"
-                    android:src="@drawable/graph2"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="30dp"/>
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    app:shapeAppearanceOverlay="@style/RoundedSquare"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:background="?attr/fragmentsBackground"
+                    android:scaleType="center"
                     android:layout_gravity="center"
                     android:layout_marginBottom="30dp"/>
 
