--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -51,7 +51,8 @@
                 android:src="@drawable/baseline_settings_24"
                 android:background="@null"
                 android:layout_marginEnd="20dp"
-                android:layout_gravity="end|center"/>
+                android:layout_gravity="end|center"
+                app:tint="?android:attr/iconTint" />
 
         </LinearLayout>
 
@@ -60,35 +61,34 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp">
 
             <com.google.android.material.imageview.ShapeableImageView
                 app:shapeAppearanceOverlay="@style/RoundedSquare"
-                android:layout_width="340dp"
+                android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:background="@color/pastel"
+                android:background="?attr/fragmentsBackground"
                 android:scaleType="center"
-                android:src="@drawable/graph4"
                 android:layout_gravity="center"
                 android:layout_marginBottom="30dp"/>
 
             <com.google.android.material.imageview.ShapeableImageView
                 app:shapeAppearanceOverlay="@style/RoundedSquare"
-                android:layout_width="340dp"
+                android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:background="@color/pastel"
+                android:background="?attr/fragmentsBackground"
                 android:scaleType="center"
-                android:src="@drawable/graph5"
                 android:layout_gravity="center"
                 android:layout_marginBottom="30dp"/>
 
             <com.google.android.material.imageview.ShapeableImageView
                 app:shapeAppearanceOverlay="@style/RoundedSquare"
-                android:layout_width="340dp"
+                android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:background="@color/pastel"
+                android:background="?attr/fragmentsBackground"
                 android:scaleType="center"
-                android:src="@drawable/graph1"
                 android:layout_gravity="center"
                 android:layout_marginBottom="30dp"/>
 
