--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,7 +6,8 @@
         <item name="android:colorBackground">@color/blackBg</item>
         <item name="android:colorForeground">@color/grayDark</item>
         <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:textColorSecondary">@color/whiteSecondary</item>
+        <item name="android:textColorSecondary">@color/white</item>
         <item name="android:iconTint">@color/white</item>
+        <item name="fragmentsBackground">@color/grayDark</item>
     </style>
 </resources>
