--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,5 +9,7 @@
         <item name="android:textColorSecondary">@color/grayDark</item>
         <item name="android:iconTint">@color/black</item>
         <item name="android:buttonStyle">@style/CustomButtonStyle</item>
+
+        <item name="fragmentsBackground">@color/pastel</item>
     </style>
 </resources>
