--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,13 +5,12 @@
         <item name="android:itemBackground">@null</item>
     </style>
 
-    <style name="CustomButtonStyle" parent="Widget.AppCompat.Button">
-
+    <style name="CustomButtonStyle" parent="Widget.Material3.Button">
         <item name="android:background">@drawable/round_button</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:padding">12dp</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textAllCaps">false</item>
-
     </style>
+
 </resources>
