--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,6 +8,9 @@
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
         <item name="android:iconTint">@color/white</item>
+
         <item name="fragmentsBackground">@color/grayDark</item>
+
+        <item name="fontFamily">@font/redhatdisplay</item>
     </style>
 </resources>
