--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,5 +2,9 @@
 <resources>
     <declare-styleable name="CustomTheme">
         <attr name="fragmentsBackground" format="color"/>
+        <attr name="buttonText" format="color"/>
+        <attr name="buttonIconTint" format="color"/>
     </declare-styleable>
+
+
 </resources>
