--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,13 +21,15 @@
             android:layout_marginBottom="20dp"/>
 
         <LinearLayout
-            android:layout_width="310dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:hint="Email ou Username">
@@ -41,7 +43,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/passwordLayout"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 app:endIconMode="password_toggle"
@@ -55,17 +57,19 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_gravity="start"
-                android:layout_marginStart="5dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Esqueceu sua senha? "
-                android:textSize="15sp"
-                android:layout_marginBottom="20dp"/>
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Esqueceu sua senha? "
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/lblReset"
@@ -75,7 +79,6 @@
                     android:textStyle="bold"
                     android:textSize="15sp"
                     android:textColor="@color/greenDark"
-                    android:layout_marginBottom="20dp"
                     android:clickable="true"
                     android:focusable="true"/>
 
@@ -83,7 +86,7 @@
 
             <Button
                 android:id="@+id/btnLogin"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="LOGIN"
                 style="@style/CustomButtonStyle"
@@ -91,14 +94,14 @@
 
             <Button
                 android:id="@+id/btnRegister"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="CADASTRAR"
                 style="@style/CustomButtonStyle"/>
 
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/btnGoogle"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_marginTop="15dp"
                 android:textSize="18sp"/>
