--- a/app/src/main/res/layout/activity_usersettings.xml
+++ b/app/src/main/res/layout/activity_usersettings.xml
@@ -32,8 +32,8 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginStart="30dp"
         android:layout_marginEnd="20dp">
 
         <com.google.android.material.textfield.TextInputLayout
@@ -114,7 +114,7 @@
             android:text="Atualizar Informações"
             app:icon="@drawable/baseline_analytics_24"
             app:iconSize="30dp"
-            app:iconTint="?android:attr/iconTint"
+            app:iconTint="?attr/buttonIconTint"
             app:iconGravity="textStart"
             app:iconPadding="20dp"/>
 
