--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -18,8 +18,7 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:layout_marginBottom="20dp"
-            android:background="?android:attr/colorForeground">
+            android:background="?android:attr/colorBackground">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgTeam"
@@ -55,6 +54,12 @@
                 app:tint="?android:attr/iconTint" />
 
         </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@drawable/divider"
+            android:backgroundTint="?android:attr/colorForeground"
+            android:layout_marginBottom="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
