--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="grayDark">#4A4A4A</color>
     <color name="white">#FFFFFF</color>
     <color name="whiteSecondary">#C7C7C7</color>
-    <color name="green">#81DC7E</color>
+    <color name="green">#4FDB4A</color>
     <color name="greenDark">#06B600</color>
     <color name="blue">#0091FF</color>
     <color name="pastel">#DADADA</color>
