--- a/app/src/main/res/values/custom_styles.xml
+++ b/app/src/main/res/values/custom_styles.xml
@@ -6,7 +6,7 @@
     </style>
 
     <style name="RoundedSquare">
-        <item name="cornerSize">10%</item>
+        <item name="cornerSize">20dp</item>
     </style>
 
     <style name="CornerCut">
