--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="greenDark">#06B600</color>
     <color name="blue">#0091FF</color>
     <color name="pastel">#DADADA</color>
+    <color name="red">#FF0000</color>
 </resources>
