--- a/app/src/main/res/layout/activity_usersettings.xml
+++ b/app/src/main/res/layout/activity_usersettings.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="top">
 
@@ -25,100 +25,184 @@
             android:layout_margin="15dp"
             app:tint="?android:attr/iconTint" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="20dp">
-
-        <com.google.android.material.textfield.TextInputLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:hint="Nome de Usuário">
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtUsername"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"/>
+                android:orientation="horizontal"
+                android:layout_marginBottom="20dp">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Nome de Usuário">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:hint="Nome Completo">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txtUsername"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="rafaelguerra"
+                        android:inputType="textEmailAddress"
+                        android:enabled="false"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtFullname"
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageButton
+                    android:id="@+id/btnEditUsername"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    android:background="@drawable/round_button"
+                    android:src="@drawable/baseline_edit_24"
+                    app:tint="?android:attr/iconTint"
+                    android:layout_margin="4dp"/>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"/>
+                android:orientation="horizontal"
+                android:layout_marginBottom="20dp">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Nome Completo">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:hint="Senha">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txtFullname"
+                        android:text="Rafael Guerra"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="textEmailAddress"
+                        android:enabled="false"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtPassword"
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageButton
+                    android:id="@+id/btnEditFullname"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    android:background="@drawable/round_button"
+                    android:src="@drawable/baseline_edit_24"
+                    app:tint="?android:attr/iconTint"
+                    android:layout_margin="4dp"/>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"/>
+                android:orientation="horizontal"
+                android:layout_marginBottom="20dp">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Gênero">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:hint="Genêro">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txtGender"
+                        android:text="Masculino"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="textEmailAddress"
+                        android:enabled="false"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtGender"
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageButton
+                    android:id="@+id/btnEditGender"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    android:background="@drawable/round_button"
+                    android:src="@drawable/baseline_edit_24"
+                    app:tint="?android:attr/iconTint"
+                    android:layout_margin="4dp"/>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"/>
+                android:orientation="horizontal"
+                android:layout_marginBottom="20dp">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Nacionalidade">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:hint="Nacionalidade">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txtNationality"
+                        android:text="Brazilian"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="textEmailAddress"
+                        android:enabled="false"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtNationality"
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageButton
+                    android:id="@+id/btnEditNationality"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    android:background="@drawable/round_button"
+                    android:src="@drawable/baseline_edit_24"
+                    app:tint="?android:attr/iconTint"
+                    android:layout_margin="4dp"/>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"/>
+                android:orientation="horizontal"
+                android:layout_marginBottom="20dp">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Senha"
+                    app:endIconMode="password_toggle">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnUpdate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/CustomButtonStyle"
-            android:text="Atualizar Informações"
-            app:icon="@drawable/baseline_analytics_24"
-            app:iconSize="30dp"
-            app:iconTint="?attr/buttonIconTint"
-            app:iconGravity="textStart"
-            app:iconPadding="20dp"/>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txtPassword"
+                        android:text="admin123"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="textPassword"
+                        android:enabled="false"/>
 
-    </LinearLayout>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageButton
+                    android:id="@+id/btnEditPassword"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    android:background="@drawable/round_button"
+                    android:src="@drawable/baseline_edit_24"
+                    app:tint="?android:attr/iconTint"
+                    android:layout_margin="4dp"/>
+            </LinearLayout>
+
+        </LinearLayout>
 
 
     </LinearLayout>
