--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,13 +16,13 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="65dp"
             android:padding="10dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/navDrawerButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_gravity="start"
                 android:contentDescription="@string/logouser"
                 android:src="@drawable/default_image" />
@@ -37,8 +37,8 @@
             <ImageButton
                 android:id="@+id/btnLogo"
                 android:scaleType="fitXY"
-                android:layout_width="50dp"
-                android:layout_height="40dp"
+                android:layout_width="55dp"
+                android:layout_height="45dp"
                 android:layout_gravity="center_horizontal"
                 android:background="@null"
                 android:src="@drawable/logo_transparent"/>
@@ -47,8 +47,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@drawable/divider"
-            android:backgroundTint="?android:attr/colorForeground"/>
+            android:background="?android:attr/colorForeground"/>
 
         <FrameLayout
             android:id="@+id/frame_layout"
@@ -59,9 +58,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@drawable/divider"
-            android:backgroundTint="?android:attr/colorForeground"/>
-
+            android:background="?android:attr/colorForeground"/>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavView"
@@ -86,6 +83,24 @@
         app:menu="@menu/nav_menu"
         app:itemIconTint="?android:attr/iconTint"
         app:itemTextColor="?android:attr/textColorPrimary"
-        android:background="?android:attr/colorBackground"/>
+        android:background="?android:attr/colorBackground">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="bottom">
+
+            <ImageButton
+                android:id="@+id/btnTheme"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="end"
+                android:src="@drawable/baseline_sunny_24"
+                android:background="@null"
+                android:layout_margin="20dp"
+                android:scaleType="fitXY"
+                app:tint="?android:attr/iconTint" />
+        </LinearLayout>
+    </com.google.android.material.navigation.NavigationView>
 </androidx.drawerlayout.widget.DrawerLayout>
