--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,32 +3,39 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:gravity="center_vertical"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="top"
+    android:layout_gravity="top"
     android:theme="@style/Base.Theme.EcoSynergyApp"
     android:background="?android:attr/colorBackground">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/userPicture"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/default_image"
-            android:layout_gravity="start" />
-
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/userPicture"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/default_image"
+        android:layout_gravity="start"
+        android:layout_marginBottom="10dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
-
+            android:orientation="horizontal"
+            android:layout_marginBottom="2dp">
             <TextView
                 android:id="@+id/lblUserFullname"
                 android:layout_width="wrap_content"
@@ -46,26 +53,32 @@
                 tools:text="\@rafaelguerra"
                 android:textColor="?android:attr/textColorSecondary"
                 android:textSize="13sp" />
-
         </LinearLayout>
+            <TextView
+                android:id="@+id/lblUserEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="rafael@ecosynergy.com"
+                android:textColor="?android:attr/textColorSecondary"
+                android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/lblUserEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="rafael@ecosynergy.com"
-            android:textColor="?android:attr/textColorSecondary"
-            android:textSize="14sp" />
     </LinearLayout>
-
     <ImageButton
         android:id="@+id/btnLogout"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_gravity="end"
         android:src="@drawable/baseline_logout_24"
         android:background="@null"
         android:scaleType="fitXY"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
         app:tint="?android:attr/iconTint" />
+
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="2dp"
+        android:background="?android:attr/colorControlHighlight"/>
 
 </LinearLayout>
