--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".register.RegisterActivity">
+    tools:context=".register.RegisterActivity"
+    android:focusable="false">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -57,7 +58,7 @@
                 android:id="@+id/passwordLayout"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="15dp"
                 app:endIconMode="password_toggle"
                 android:hint="Senha">
 
