--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".register.RegisterActivity2">
+    tools:context=".register.RegisterActivity2"
+    android:focusable="false">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,7 +43,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="Nome Completo"
-                android:layout_marginBottom="15dp">
+                android:layout_marginBottom="20dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txtFullname"
@@ -55,7 +56,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="Nome de Usuário"
-                android:layout_marginBottom="15dp">
+                android:layout_marginBottom="20dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txtUsername"
